# licenseme

./: .gitignore  README.md  licenseme  pyproject.toml  setup.cfg
licenseme_cli/: __init__.py  cli.py
