[metadata]
name = licenseme-cli
version = 0.1.0
description = Interactive SPDX-based license generator
long_description = file: README.md
long_description_content_type = text/markdown
author = tcsenpai
license = MIT
license_files = LICENSE
keywords = license, spdx, cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Build Tools

[options]
packages = find:
python_requires = >=3.9
include_package_data = true
install_requires =

[options.package_data]
licenseme_cli = data/licenses/*.txt

[options.entry_points]
console_scripts =
    licenseme = licenseme_cli.cli:main
